--- a/index.html
+++ b/index.html
@@ -1,115 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang="en">
   <head>
+    <title>We Are the Champions</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="index.css" />
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Josefin Sans:wght@400;700&display=swap"
-    />
+
   </head>
   <body>
-    <div class="stretch-goals">
-      <div class="abdellah-endorsement">
-        <div class="abdellah-endorsement-child"></div>
-        <div class="that-transcription-feature">
-          That transcription feature you completed for Scrimba 3.0 is amazing. I
-          know you’ve been working hard on it for several months now. 👏👏👏
-          Really good work 🙌
-        </div>
-        <b class="to-abdellah">To Abdellah</b>
-        <b class="from-sindre">From Sindre</b>
-        <b class="b">❤️ 7</b>
-      </div>
-      <div class="frame">
-        <button class="publish-button" id="btn-publish-el">
-          <div class="publish-button-child"></div>
-          <b class="publish">Publish</b>
-        </button>
-        <div class="leanne-endoresement">
-          <div class="frame1">
-            <div class="frame-child"></div>
-            <div class="frame2">
-              <div class="leanne-thank-you">
-                Leanne! Thank you so much for helping me with the March
-                accounting. Saved so much time because of you! 💜 Frode
-              </div>
-            </div>
-          </div>
-          <div class="frame3">
-            <div class="frame4">
-              <b class="to-leanne">To Leanne</b>
-            </div>
-            <div class="frame5">
-              <b class="b1">❤️ 4</b>
-            </div>
-            <div class="frame6">
-              <b class="from-frode">From Frode</b>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="frame7">
-        <textarea
-          class="text-area"
-          placeholder="Write your endorsement here..."
-          id="endorsement-el"
-        >
-        </textarea>
-        <div class="bob-endorsement">
-          <div class="abdellah-endorsement-child"></div>
-          <div class="frame8">
-            <div class="that-transcription-feature1">
-              That transcription feature you completed for Scrimba 3.0 is
-              amazing. I know you’ve been working hard on it for several months
-              now. 👏👏👏 Really good work 🙌
-            </div>
-          </div>
-          <div class="frame9">
-            <b class="to-bob">To Bob</b>
-          </div>
-          <div class="frame10">
-            <b class="from-sindre1">From Sindre</b>
-          </div>
-          <div class="frame11">
-            <b class="b2">❤️ 7</b>
-          </div>
-        </div>
-      </div>
-      <div class="frame12">
-        <div class="frame13">
-          <input
-            class="from-field"
-            id="txt-from-el"
-            placeholder="From"
-            type="text"
-          />
-
-          <input class="to-field" id="txt-to-el" placeholder="To" type="text" />
-        </div>
-        <div class="frame14">
-          <img
-            class="freddie-icon"
-            alt="Freddy"
-            src="./public/freddie@2x.png"
-          />
-
-          <div class="frame15">
-            <h2 class="we-are-the">We are the Champions</h2>
-            <h3 class="endorsements-">
-              <span>- </span>
-              <b>Endorsements - </b>
-            </h3>
-          </div>
-        </div>
-      </div>
-    </div>
+    <img src="public/freddie@2x.png" id="freddy-el">
+    <h1>We Are the Champions</h1>
+    
   </body>
 </html>
